Minor refactoring for Bridge AI